--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,6 +102,7 @@
                                             <p class="text-muted"><%= data[i].address %></p>  
                                             <div>
                                                 <a href="tel:<%= data[i].tel %>"><i class="fa fa-phone" aria-hidden="true" style="font-size:32px;color:green"></i></a>
+                                                <a href="tel:<%= data[i].tel %>"><i class="fa fa-phone" aria-hidden="true" style="font-size:32px;color:yellow"></i></a>
                                             </div>                        
                                             <a href="/profile/<%= data[i].id %>" class="btn btn-raised btn-sm">View Profile</a>
                                         </div>
